--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "zipcodes": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
